tests/passes/well-formed/external-type-mismatch.expect
---CODE---
1
---STDERR---
Error: tests/passes/well-formed/external-type-mismatch.futil
24 |    k1 = std_reg(16);
   |    ^^ Malformed Control: type of fed-in external cell does not match original type
